trying to get image to load for local

--- a/experimentals.html
+++ b/experimentals.html
@@ -256,8 +256,7 @@ const localExperimentals = [
   {
   title: "Einstein Equation",
   desc: "MathML loaded locally",
-  type: "math",
-  src: "<math xmlns='http://www.w3.org/1998/Math/MathML'><mi>E</mi><mo>=</mo><mi>m</mi><msup><mi>c</mi><mn>2</mn></msup></math>"
+  type: "math"
   }
 ];
 
