trying to get image to load for local

--- a/experimentals.html
+++ b/experimentals.html
@@ -244,7 +244,7 @@ const localExperimentals = [
     title: "Burak & Cat",
     desc: "Loaded from localStorage",
     type: "image",
-    src: "burak.jpg"
+    src: "burak.webp"
   },
   {
     title: "Audio Track",
