trying to get image to load for local

--- a/experimentals.html
+++ b/experimentals.html
@@ -125,6 +125,8 @@
               height: auto;
               margin: 0 auto;
               border-radius: 10px;
+              border: 5px solid black;
+              background: white;
             }
 
 
