trying to get image to load for local

--- a/experimentals.html
+++ b/experimentals.html
@@ -144,6 +144,8 @@
               width: 350px;
               height: auto;
               margin: 0 auto;
+              border: 5px solid black;
+              background: white;
             }
 
 
