local part done

--- a/experimentals.html
+++ b/experimentals.html
@@ -246,7 +246,7 @@ customElements.define("media-card", MediaCard);
 const localExperimentals = [
   {
     title: "Burak & Cat",
-    desc: "Loaded from localStorage",
+    desc: "Image loaded locally",
     type: "image",
     src: "burak.webp"
   },
@@ -264,7 +264,7 @@ const localExperimentals = [
   },
   {
   title: "Canvas Demo",
-  desc: "Blank white canvas",
+  desc: "Blank white canvas loaded locally",
   type: "canvas"
 }
 ];
