--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       transition: background-color 0.25s ease;
     }
     header:hover {
-      background-color: var(--acent-color, red);
+      background-color: var(--accent-color, red);
     }
     nav ul {
       list-style-type: none;
@@ -58,6 +58,12 @@
       font-weight:bold;
       font-size: 1.5rem;
       transition: transform 0.2s ease, color 0.2s ease;
+    }
+    nav a:hover,
+    nav a:focus-visible {
+      color: var(--accent-color);
+      transform: translateY(-2px);
+      outline: none;
     }
     main {
       padding: 2.2em 7%;
@@ -102,7 +108,7 @@
         color: #333;
       }
       @media (max-width: 800px){
-        nav u1 {
+        nav ul {
           flex-direction: column;
         }
         article {
@@ -149,7 +155,6 @@
         font-size: 1.2em;
       }
     </style>
-  
 </head>
 
 <body>
